--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -19,7 +19,7 @@
           %h1
             -# = link_to image_tag('jape.png'), '/'
             -# = link_to image_tag('johnfailicewhistle.jpg'), '/'
-            = link_to image_tag('/images/icons/logo.png'), '/'
+            = link_to image_tag('icewhistle_combined.png'), '/'
         .large-8.columns
           %ul.dropdown.menu{:'data-dropdown-menu' => ""}
             %li
