--- a/app/assets/stylesheets/icewhistle.css.scss
+++ b/app/assets/stylesheets/icewhistle.css.scss
@@ -644,21 +644,23 @@ medium.date {
   .date {
     margin: 5px 0px;
     color: #777;
+    font-size: 0.65rem;
   }
   .related_title {
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 0.85rem;
+    line-height: 1.2em;
     font-weight: 300;
     margin-bottom: 5px;
   }
 }
 
 .prev_next {
+  margin-top: 2.5rem;
   h6 { float: left;
   }
   .link {
     float: left;
-    margin-top: 0.5rem;
+    margin-top: 0rem;
     margin-bottom: 0.5rem;
     margin-left: 0.5rem;
   }
