--- a/app/assets/stylesheets/icewhistle.css.scss
+++ b/app/assets/stylesheets/icewhistle.css.scss
@@ -586,6 +586,9 @@ medium.date {
   line-height: 1.57rem;
   margin-bottom: 1.25rem;
 
+  ul {
+    margin-top: 1rem;
+  }
   p {
 
    font-size: 1rem;
