--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,11 +44,11 @@
     %header#header
       %div{:"data-sticky-container" => ''}
         .top-bar{:"data-margin-top" => 0, :"data-sticky" => '', style: 'width: 100%', :'data-top-anchor' => 1}
-          .top-bar-title
+          .top-bar-title.columns.large-6.medium-5
             %span.menu{"data-hide-for" => "medium", "data-responsive-toggle" => "responsive-menu"}
               %button.menu-icon.dark{"data-toggle" => "", :type => "button"}
             %h1
-              = link_to image_tag('icewhistle_combined.png'), '/'
+              %span.hide-for-medium-only= link_to image_tag('icewhistle_combined.png'), '/'
               = link_to image_tag('logo_small.png'), '/'
           #responsive-menu 
             .top-bar-left
