--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,11 +1,11 @@
 - if @post.image?
   - if @post.image_width > 1200
-    .post_banner= image_tag @post.image.url
+    .post_banner= image_tag @post.image.url.gsub(/development/, 'production')
   - else 
     .row
       .small-12.columns.text-left.post_body
         = image_tag @post.image.url
-.post
+.post#post_top
 
   .row
     .columns.text-left.small-centered.medium-10.large-12.large-offset-0
