--- a/app/views/layouts/cv.html.erb
+++ b/app/views/layouts/cv.html.erb
@@ -14,11 +14,12 @@
 
 <div id="header-cv">
 <center>
-John W. Fail 
-<br />
+<div class="name">John W. Fail</div>
+
 <span style="font-size: 0.7em;" class="noprint">[ <%= link_to 'contact', '/contact' %> ]</span>
-<div class="print_only">
-<p>based in Helsinki, Finland</p><p>  john@ptarmigan.fi</p>
+<div class="print_only ">
+<p class="small space">based in Helsinki, Finland</p>
+<p>  john@ptarmigan.fi</p>
 
 	 </center>
 </div>
