--- a/app/views/cv/index.html.erb
+++ b/app/views/cv/index.html.erb
@@ -190,7 +190,13 @@ function showElementsByClass(classray) {
 </div>
 </div>
 
+
 <br clear="all">
+<div class="section">
+<div class="cvleft">
+	<div class="print_only">Expanded/full CV available online: www.johnw.fail/cv</div>
+</div>
+</div>
 <br />
 <br />
 <% if params[:full]  %>
