fix email validation

--- a/app/views/contact/new.html.haml
+++ b/app/views/contact/new.html.haml
@@ -20,7 +20,7 @@
               %label{:for => "email"} Your email address:
             .small-9.columns
               %small.error A valid email address is required.
-              = form.text_field :email,  :required => "", :pattern => "[a-zA-Z]+"
+              = form.text_field :email,  :required => ""
       .row.expanded
         .small-10.medium-9.columns
           .row.expanded
