--- a/app/views/frontpage/_title_top_post.haml
+++ b/app/views/frontpage/_title_top_post.haml
@@ -21,5 +21,10 @@
     
 .row          
   .small-12.columns.text-center
-    %p= raw Nokogiri::HTML.parse(post.body).css('p').first.text
+    - first = Nokogiri::HTML.parse(post.body).css('p')
+    %p
+      - if first.blank?
+        = raw Nokogiri::HTML.parse(post.body).search('div')[0..2]
+      - else
+        = raw first
     = link_to 'Read more', post, :class => [:button, :tiny]
